namespaces/live.cloud-platform.service.justice.gov.uk/data-platform-app-bold-case-info-dashboard-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-platform-app-bold-case-info-dashboard-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "dev"
    pod-security.kubernetes.io/audit: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "#ask-bold-case-info-dashboard"
    cloud-platform.justice.gov.uk/application: "Case Information Dashboard"
    cloud-platform.justice.gov.uk/owner: "BOLD Reducing Reoffending Operational Pilot: "
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/bold-case-info-dashboard"
    cloud-platform.justice.gov.uk/team-name: "bold-rr-ops-team"
    cloud-platform.justice.gov.uk/review-after: ""
